# Discord-Downloader

./: .gitignore  README.md  pyproject.toml  run.bat
data/: .gitignore
scripts/: run.bat
src/: classes.py  downloader.py
src/Emoji/: main.py
