[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Mango", email = "evan940415@gmail.com"},
]
dependencies = [
    "requests>=2.28.1",
    "pretty-errors>=1.2.25",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
